# soft-fork-bot

./: pyproject.toml
docker/soft-fork-bot/: Dockerfile
src/soft_fork_bot/: git.py  utils.py
src/soft_fork_bot/meta/: config.py
src/soft_fork_bot/platform/: __init__.py  github.py  gitlab.py
